--- a/index.html
+++ b/index.html
@@ -48,17 +48,22 @@
                         <li><a href="about.html">About us</a></li>
                         <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
                         <li><a href="index.html#newsletter-section">Newsletter</a></li>
-                        <li class="menu-icon"><img src="images/menu_icon.png" ></li>
+                        <li class="menu-icon"><img src="optimized_images/menu_icon.webp" ></li>
                     </ul>
                 </nav>
             </div>
         </header>
         
         <section class="hero">
+<!-- 
+            <img class="mobile" src="optimized_images/Hero_Mobile.webp">
+            <img class="tablet" src="optimized_images/Hero_Tablet.webp"> -->
 
-            <img class="desktop" src="images/Hero_Desktop.jpg">
-            <img class="mobile" src="images/Hero_Mobile.jpg">
-            <img class="tablet" src="images/Hero_Tablet.jpg">
+            <picture>
+                <source media="(max-width: 576px)" srcset="optimized_images/Hero_Mobile.webp">
+                <source media="(max-width: 960px)" srcset="optimized_images/Hero_Tablet.webp">
+                <img class="desktop" src="optimized_images/Hero_Desktop.webp">
+            </picture>
 
            
             <div class="hero-content">
@@ -84,7 +89,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr1.jpg" alt="product: Penom Case">
+                            <img src="optimized_images/vr1.webp" alt="product: Penom Case">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,7 +103,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr2.jpg" alt="product: Noise Cancelling Headphone">
+                            <img src="optimized_images/vr2.webp" alt="product: Noise Cancelling Headphone">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,7 +117,7 @@
 
                     <div class="product">
                         <div class="product-picture">
-                            <img src="images/vr3.jpg" alt="product: Canon Digital SLR EOS Rebel T6">
+                            <img src="optimized_images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
